--- a/style.css
+++ b/style.css
@@ -1,3 +1,29 @@
-body {
-  background-color: #669999;
+.visually-hidden--text {
+  font-size: 0;
+  line-height: 0;
+  margin: 0;
+  padding: 0;
  }
+
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+img, picture {
+  max-width: 100%;
+  height: auto;
+}
+
